--- a/src/app/shared/components/multi-select/multi-select.component.html
+++ b/src/app/shared/components/multi-select/multi-select.component.html
@@ -17,7 +17,7 @@
 			<div class="br-item" tabindex="-1" (click)="setSelected()">
 				<div class="br-checkbox">
 					<input id="{{ id + i }}" type="checkbox" value="{{ option.value }}" />
-					<label for="{{ id + i }}">{{ option.text }}</label>
+					<label for="{{ id + i }}">{{ option.label }}</label>
 				</div>
 			</div>
 		}
