(feat): professional-information

--- a/src/app/features/graduates/academic-information/academic-information.component.html
+++ b/src/app/features/graduates/academic-information/academic-information.component.html
@@ -55,6 +55,6 @@
 		<hr class="divider" />
 	}
 }
-<div id="btn-new-mobile">
+<div class="btn-new-mobile">
 	<button [routerLink]="['/informacoes/academicas/novo']" br-button color="primary">Novo Curso</button>
 </div>
