--- a/src/app/features/graduates/testimonials/pages/testimonials-form/testimonials-form.component.html
+++ b/src/app/features/graduates/testimonials/pages/testimonials-form/testimonials-form.component.html
@@ -2,7 +2,11 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-edit">
 	<div class="row">
 		<div class="col-12 col-lg-7">
-			<app-textarea id="testimonial" label="Texto do Depoimento " formControlName="text"></app-textarea>
+			<app-textarea id="testimonial" label="Texto do Depoimento " formControlName="text">
+				@if (form.controls.text.invalid && !form.controls.text.untouched) {
+					<span br-feedback state="danger">Campo obrigatório</span>
+				}
+			</app-textarea>
 		</div>
 		<div class="col-12 col-lg-5">
 			<div class="d-flex flex-column gap-2">
@@ -13,6 +17,9 @@
 						label="Curso Relacionado"
 						formControlName="relatedAcademicInfo"
 					>
+						@if (form.controls.relatedAcademicInfo.invalid && !form.controls.relatedAcademicInfo.untouched) {
+							<span br-feedback state="danger">Campo obrigatório</span>
+						}
 					</app-select>
 				}
 				<app-radio
@@ -21,6 +28,9 @@
 					formControlName="privacy"
 					label="Privacidade do Depoimento"
 				></app-radio>
+				@if (form.controls.privacy.invalid && !form.controls.privacy.untouched) {
+					<span br-feedback noPropagateState state="danger">Campo obrigatório</span>
+				}
 			</div>
 		</div>
 
