--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <h1>Dashboard de Dados Públicos</h1>
-<app-filter></app-filter>
+<app-dashboard-filter></app-dashboard-filter>
 <app-table [data]="dataPaginated" [columns]="columns"></app-table>
 <app-paginator
 	(page)="onPageChange($event)"
