--- a/src/app/shared/components/collapse-item/collapse-item.component.scss
+++ b/src/app/shared/components/collapse-item/collapse-item.component.scss
@@ -12,6 +12,7 @@
 		font-weight: 600;
 		line-height: 23.18px;
 		cursor: pointer;
+		margin-bottom: 16px;
 
 		display: flex;
 		align-items: center;
