--- a/src/app/features/dashboard/components/filter/filter.component.html
+++ b/src/app/features/dashboard/components/filter/filter.component.html
@@ -15,7 +15,7 @@
 			label="Curso"
 		></app-multi-select>
 		<app-multi-select
-			[data]="titrationOptions"
+			[data]="courseLevelOptions"
 			formControlName="titration"
 			class="col-md-3 col-12"
 			id="titration"
