--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -3,8 +3,10 @@
 	overflow-x: auto;
 }
 
-i,
-a {
-	color: var(--blue-warm-vivid-blue-warm-vivid-70, #1351b4);
-	cursor: pointer;
+.br-table {
+	i,
+	a {
+		color: var(--blue-warm-vivid-blue-warm-vivid-70, #1351b4);
+		cursor: pointer;
+	}
 }
