--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -48,7 +48,7 @@
 <ng-template #menuItem let-item>
 	@if (item.url) {
 		@if (item.external) {
-			<a class="menu-item clickable" [href]="item.url">
+			<a class="menu-item clickable" target="_blank" [href]="item.url">
 				<span class="icon">
 					<i class="fas" [class]="item.icon" aria-hidden="true"></i>
 				</span>
