--- a/src/app/shared/components/checkbox/checkbox.component.html
+++ b/src/app/shared/components/checkbox/checkbox.component.html
@@ -1,4 +1,9 @@
-<div class="br-checkbox {{ state }}" [ngClass]="{ disabled }">
-	<input id="checkbox-{{ id }}" name="checkbox-{{ id }}" type="checkbox" [attr.aria-label]="label" [checked]="value" />
-	<label for="checkbox-{{ id }}">{{ label }}</label>
-</div>
+<input
+	(change)="onChangeCheck($event)"
+	id="checkbox-{{ id }}"
+	name="checkbox-{{ id }}"
+	type="checkbox"
+	[attr.aria-label]="label"
+	[checked]="value"
+/>
+<label for="checkbox-{{ id }}">{{ label }}</label>
