(fix): new announcement screen

--- a/src/app/features/coordinator/announcements/pages/announcement-form/announcement-form.component.html
+++ b/src/app/features/coordinator/announcements/pages/announcement-form/announcement-form.component.html
@@ -1,4 +1,4 @@
-<p>Novo Comunicado</p>
+<h1>Novo Comunicado</h1>
 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="form-edit">
 	<div class="row">
 		<div class="col-12 col-lg-6">
