--- a/src/app/features/coordinator/graduates/components/personal-data/personal-data.component.html
+++ b/src/app/features/coordinator/graduates/components/personal-data/personal-data.component.html
@@ -6,24 +6,24 @@
 		<app-item-info label="CPF" [value]="data.cpf"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
-		<app-item-info label="E-mail" [value]="data.email"></app-item-info>
+		<app-item-info type="email" label="E-mail" [value]="data.email"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
-		<app-item-info label="E-mail Secundário" [value]="data.secondaryEmail"></app-item-info>
+		<app-item-info type="email" label="E-mail Secundário" [value]="data.secondaryEmail"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
-		<app-item-info label="Telefone" [value]="data.phone"></app-item-info>
+		<app-item-info type="phone" label="Telefone" [value]="data.phone"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
-		<app-item-info label="Telefone Secundário" [value]="data.secondaryPhone"></app-item-info>
+		<app-item-info type="phone" label="Telefone Secundário" [value]="data.secondaryPhone"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
-		<app-item-info label="Link do Lattes" [value]="data.lattesLink"></app-item-info>
+		<app-item-info type="url" label="Link do Lattes" [value]="data.lattesLink"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
-		<app-item-info label="Link do ORCID" [value]="data.orcidLink"></app-item-info>
+		<app-item-info type="url" label="Link do ORCID" [value]="data.orcidLink"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
-		<app-item-info label="Link do LinkedIn" [value]="data.linkedinLink"></app-item-info>
+		<app-item-info type="url" label="Link do LinkedIn" [value]="data.linkedinLink"></app-item-info>
 	</div>
 </div>
