--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -22,13 +22,13 @@
 		<app-item-info label="Telefone Secundário" [value]="data.secondaryPhone"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
-		<app-item-info label="Link do Lattes" [value]="data.lattesLink"></app-item-info>
+		<app-item-info type="email" label="Link do Lattes" [value]="data.lattesLink"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
-		<app-item-info label="Link do ORCID" [value]="data.orcidLink"></app-item-info>
+		<app-item-info type="email" label="Link do ORCID" [value]="data.orcidLink"></app-item-info>
 	</div>
 	<div class="col-12 col-lg-3">
-		<app-item-info label="Link do LinkedIn" [value]="data.linkedinLink"></app-item-info>
+		<app-item-info type="email" label="Link do LinkedIn" [value]="data.linkedinLink"></app-item-info>
 	</div>
 </div>
 <div id="btn-edit-profile-mobile">
