--- a/src/app/shared/components/textarea/textarea.component.html
+++ b/src/app/shared/components/textarea/textarea.component.html
@@ -12,6 +12,7 @@
 		[required]="required"
 		[readonly]="readonly"
 		[(ngModel)]="value"
+		(blur)="onBlur()"
 		(change)="onChange($event)"
 	></textarea>
 
