--- a/src/app/features/profile/pages/profile-edit/profile-edit.component.html
+++ b/src/app/features/profile/pages/profile-edit/profile-edit.component.html
@@ -10,11 +10,7 @@
 	</div>
 	<div class="row">
 		<div class="col-12 col-lg-3">
-			<app-input id="email" label="E-mail" type="email" formControlName="email">
-				@if (form.get('email').hasError('email')) {
-					<span br-feedback state="warning"> E-mail inválido </span>
-				}
-			</app-input>
+			<app-input id="email" label="E-mail" type="email" formControlName="email"></app-input>
 		</div>
 		<div class="col-12 col-lg-3">
 			<app-input id="secondaryEmail" label="E-mail Secundário" type="email" formControlName="secondaryEmail">
