--- a/src/app/shared/components/item-info/item-info.component.html
+++ b/src/app/shared/components/item-info/item-info.component.html
@@ -1,2 +1,15 @@
 <b>{{ label() }}</b>
-<span> {{ value() }}</span>
+@switch (type()) {
+	@case ('url') {
+		<a [href]="value()" target="_blank">{{ value() }}</a>
+	}
+	@case ('phone') {
+		<a [href]="'tel:' + value()">{{ value() }}</a>
+	}
+	@case ('email') {
+		<a [href]="'mailto:' + value()">{{ value() }}</a>
+	}
+	@default {
+		<span>{{ value() }}</span>
+	}
+}
