--- a/src/app/shared/components/table/table.component.scss
+++ b/src/app/shared/components/table/table.component.scss
@@ -6,7 +6,7 @@
 .br-table {
 	i,
 	a {
-		color: var(--blue-warm-vivid-blue-warm-vivid-70, #1351b4);
+		color: var(--blue-warm-vivid-70, #1351b4);
 		cursor: pointer;
 	}
 }
