--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,9 @@
 			<div class="row h-100">
 				@if (!hideNavbar()) {
 					<app-menu
-						[ngClass]="{ 'col-xl-2 col-lg-3 col-md-4 col-sm-5 active': !isMobile() && !isPublic() }"
+						[ngClass]="{ 'col-lg-2 col-md-3 col-sm-5 active': !isMobile() && !isPublic() }"
 						id="main-navigation"
-						data-breakpoints="col-xl-2 col-lg-3 col-md-4 col-sm-5"
+						data-breakpoints="col-lg-2 col-md-3 col-sm-5"
 					></app-menu>
 				}
 				<div class="col pb-4 pb-lg-5 pt-2 pt-lg-4">
