--- a/src/app/features/dashboard/components/students-chart/students-chart.component.scss
+++ b/src/app/features/dashboard/components/students-chart/students-chart.component.scss
@@ -1,10 +1,15 @@
+.canvas {
+	height: 200px;
+	width: 100%;
+}
+
 .total {
 	color: var(--color-primary-darken-01);
 	font-size: 32.8px;
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
-	margin-bottom: 8px;
+	margin-top: 20px;
 
 	position: absolute;
 	display: flex;
@@ -22,6 +27,7 @@
 	align-items: center;
 	width: 200px;
 	height: 200px;
+	padding-bottom: 8px;
 }
 
 .color-box {
